Fix to the layout of the build .summary-header so my eyes bleed less

--- a/resources/assets/css/inner/inner.less
+++ b/resources/assets/css/inner/inner.less
@@ -140,6 +140,10 @@
     &.queued {
       background: @purple;
     }
+
+    @media (max-width: @screen-sm-max) {
+      width: 118px;
+    }
   }
 }
 
