--- a/resources/assets/css/inner/new-build.less
+++ b/resources/assets/css/inner/new-build.less
@@ -432,11 +432,25 @@
   }
 
   .summary-items {
-    .flexy(stretch, flex-start, row);
+    .flexy(stretch, flex-start, column);
+
+    margin-right: 0;
+
+    .summary-item {
+      margin-top: 1em;
+      margin-right: 0;
+    }
   }
 
   .summary-build-contents {
-    .flexy(stretch, flex-start, row);
+    .flexy(stretch, flex-start, column);
+
+    margin-right: 0;
+
+    .summary-item {
+      margin-top: 1em;
+      margin-right: 0;
+    }
   }
 }
 
@@ -450,6 +464,8 @@
 }
 
 .summary-label {
+  font-weight: 500;
+  display: block;
   color: @gray;
 }
 
